--- a/style.css
+++ b/style.css
@@ -49,4 +49,17 @@ textarea{
 
 footer{
     height: 20vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   margin-top: 50px;
+}
+footer p{
+    font-size: 1.8rem;
+    padding: 10px 5px;
+}
+footer img{
+    width: 30px;
+    display: inline-block;
+    padding: 0px 30px;
 }
